# speckit-hackathon

./: Hackathon II - Todo Spec-Driven Development.md
.claude/agents/: conversation-agent.md  crud-biz-logic-writer.md  event-notification-architect.md  planner-agent.md  (+7 more)
phase-1/: main.py  pyproject.toml  tasks.json
phase-2/: PREMIUM_UI_SUMMARY.md  QUICK_START.md  README.md  UI_ENHANCEMENTS.md  UI_ENHANCEMENT_SUMMARY.md
phase-2/backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
phase-2/backend/alembic/: env.py
phase-2/backend/alembic/versions/: 001_initial.py
phase-2/backend/src/: main.py
phase-2/backend/src/api/: auth.py
phase-2/backend/src/core/: config.py  database.py  security.py
phase-2/backend/src/middleware/: auth.py
phase-2/backend/src/models/: task.py  user.py
phase-2/backend/src/schemas/: auth.py  task.py
phase-3/: COMPLETE_SUBMISSION_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOY_FRONTEND.md  DEPLOY_NOW.md  FINAL_ACTION_PLAN.md  FINAL_STATUS_REPORT.md  FINAL_SUBMISSION_PLAN.md  FINAL_SUMMARY.md  HF_SPACE_FIX.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.md  PHASE3_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  SUBMISSION_GUIDE.md  TESTING_GUIDE.md  VERCEL_DEPLOY_GUIDE.md  deploy-vercel.bat  deploy-vercel.sh
phase-4/: .env.backend.example  .env.frontend.example  IMPLEMENTATION.md  QUICKSTART.md  README.md  STATUS.md  SUMMARY.txt  cleanup.bat  cleanup.sh  deploy.bat  deploy.sh  docker-compose.yml
(+412 files in other folders)
